--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,21 @@
+appdirs==1.4.4
 asgiref==3.7.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+coala==0.11.0
+coala-utils==0.6.7
+colorama==0.3.9
+colorlog==2.10.0
+dependency-management==0.4.0
 Django==4.2.7
+idna==3.4
+libclang-py3==3.4.0
+Pygments==2.17.2
+PyPrint==0.2.6
+requests==2.31.0
+sarge==0.1.7.post1
 sqlparse==0.4.4
+termcolor==1.1.0
 typing_extensions==4.8.0
+unidiff==0.5.5
+urllib3==2.1.0
